<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinerLayoutPreset"
    tools:context=".about.AboutUserActivity">

    <TextView
        style="@style/TitleText"
        android:text="@string/AboutUser" />

    <TextView
        android:id="@+id/text_name"
        style="@style/SimpleText"
        android:hint="@string/Name" />

    <TextView
        android:id="@+id/text_age"
        style="@style/SimpleText"
        android:hint="@string/Age" />

    <TextView
        android:id="@+id/text_login"
        style="@style/SimpleText"
        android:hint="@string/Login" />

    <TextView
        android:id="@+id/text_password"
        style="@style/SimpleText"
        android:hint="@string/Password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_delete_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/Delete" />

        <Button
            android:id="@+id/button_edit_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/Edit" />

    </LinearLayout>

    <Button
        android:id="@+id/button_exit"
        style="@style/Button"
        android:onClick="onClick"
        android:text="@string/Exit" />


</LinearLayout>